--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
